[gd_scene load_steps=2 format=3 uid="uid://dug3q248gh305"]

[ext_resource type="Script" path="res://UI/Day/ui.gd" id="1_6fvm6"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_6fvm6")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 64.0
color = Color(0.156863, 0.156863, 0.156863, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -584.0
grow_horizontal = 2
grow_vertical = 2

[node name="Header" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Header"]
layout_mode = 2
alignment = 1

[node name="Money" type="MarginContainer" parent="MarginContainer/Header/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Header/HBoxContainer/Money"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/Header/HBoxContainer/Money/VBoxContainer"]
visible = false
layout_mode = 2
text = "Time left"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TimeLeft" type="ProgressBar" parent="MarginContainer/Header/HBoxContainer/Money/VBoxContainer"]
visible = false
layout_mode = 2
max_value = 5.0
step = 1.0
value = 5.0

[node name="Days" type="MarginContainer" parent="MarginContainer/Header/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="HBoxContainer" parent="MarginContainer/Header/HBoxContainer/Days"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/Header/HBoxContainer/Days/VBoxContainer"]
layout_mode = 2
text = "DAY"
horizontal_alignment = 1

[node name="DaysNumber" type="Label" parent="MarginContainer/Header/HBoxContainer/Days/VBoxContainer"]
layout_mode = 2
text = "01"

[node name="Score" type="MarginContainer" parent="MarginContainer/Header/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Header/HBoxContainer/Score"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/Header/HBoxContainer/Score/VBoxContainer"]
layout_mode = 2
text = "Score"
horizontal_alignment = 1

[node name="ScoreNumber" type="Label" parent="MarginContainer/Header/HBoxContainer/Score/VBoxContainer"]
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2
alignment = 2

[node name="LogButton" type="Button" parent="MarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "See Log"

[node name="EndDay" type="Button" parent="MarginContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "End day
"

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="MarginContainer/MarginContainer/HBoxContainer/LogButton" to="." method="_on_log_button_pressed"]
[connection signal="pressed" from="MarginContainer/MarginContainer/HBoxContainer/EndDay" to="." method="_on_end_day_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
